# esp32-clock

./: .gitignore  COLOR.md  LICENSE  PINS.md  README.md  partitions_custom.csv  platformio.ini
SquareLineProject/EbikeDemo/: EbikeDemo.sll  EbikeDemo.spj  EbikeDemo_events.py
SquareLineProject/EbikeDemo/assets/fonts/: ui_font_Big.fcfg  ui_font_Medium.fcfg  ui_font_Number.fcfg  ui_font_Small.fcfg  ui_font_TimerFont.c  ui_font_TimerFont.fcfg
src/: lv_conf.h  main.cpp  main.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.cpp  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp_hook.c
src/ui/images/: ui_img_1560645021.c  ui_img_400942075.c  ui_img_652517623.c  ui_img_995809848.c  ui_img_bmw_png.c  ui_img_car_png.c  ui_img_clock_fill_png.c  ui_img_ebike_bg_png.c  ui_img_exitblack_png.c  ui_img_menu_line_png.c  ui_img_next_png.c  ui_img_slider_battery_png.c  ui_img_speed_slider_png.c  ui_img_stop_png.c
src/ui/screens/: ui_Driving.c  ui_HomeScreen.c  ui_LogoScreen.c  ui_TimerScreen.c
